# health-analytics-rust

./: Cargo.toml  rustfmt.toml  wrangler.toml
.github/workflows/: rust.yml
src/: lib.rs
